change to github document

--- a/RMarkdownExample.Rmd
+++ b/RMarkdownExample.Rmd
@@ -2,10 +2,7 @@
 title: "RMarkdownExample"
 author: "Beatrice Severance, Zachary Noel"
 date: "2023-02-23"
-output: 
-  html_document:
-    keep_md: yes
-  word_document: default
+output: github_document
 ---
 
 ```{r}
