--- a/RMarkdownExample.Rmd
+++ b/RMarkdownExample.Rmd
@@ -5,8 +5,49 @@ date: "2023-02-23"
 output: github_document
 ---
 
+# This is a first level header
+
+## This is a second level header
+
+### This is a third level header
+
+#### This is a fourth level header
+
+*italics*
+
+_also italics_
+
+**bold**
+
+__also bold__
+
+> This is emphasized text
+
 ```{r}
 data("mtcars")
 summary(mtcars)
 ```
 
+### Unordered lists
+
+- one item
+- second item
+- third item
+  - another item
+
+* item 1 again
+* item 2 again
+* item 3 again
+  * another item again
+
+1. The first item
+2. The second item
+3. The third item
+    - item under third
+
+### Links
+
+Github repository:
+https://github.com/Beatrice-Severance/Fungal-Amplicon-Sequencing
+
+[Link to my github](https://github.com/Beatrice-Severance/Fungal-Amplicon-Sequencing)
